<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="V1.1.0-201406091100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_warn_probe_to_find_device" />

            <Button
                android:id="@+id/btn_probe_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_probe_list" />

            <Button
                android:id="@+id/btn_switch_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sp2_switch_on" />

            <Button
                android:id="@+id/btn_switch_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sp2_switch_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_rm2_control" />

            <Button
                android:id="@+id/btn_rm2_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm2_study" />

            <Button
                android:id="@+id/btn_rm2_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm2_code" />

            <TextView
                android:id="@+id/tv_rm2_code_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_rm2_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm2_send" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_rm1_control" />

            <Button
                android:id="@+id/btn_rm1_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm1_auth" />

            <Button
                android:id="@+id/btn_rm1_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm1_study" />

            <Button
                android:id="@+id/btn_rm1_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm1_code" />

            <TextView
                android:id="@+id/tv_rm1_code_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_rm1_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rm1_send" />

            <Button
                android:id="@+id/btn_a1_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1_control" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_warn_wifi_ssid_password" />

            <EditText
                android:id="@+id/et_wifi_ssid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_wifi_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="passsword" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_smartConfig_v2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_EasyConfig_v2" />

                <Button
                    android:id="@+id/btn_smartConfig_v1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_EasyConfig_v1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>