<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_a1_temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1_temperature"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_a1_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_a1_humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1_humidity"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_a1_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_show_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/btn_show_task" />

</LinearLayout>